Fix font loading: Make font CSS async to eliminate render-blocking
- Change font CSS to async loading (media='print' onload pattern)
- Change font-display from swap to optional (reduces layout shifts)
- This should eliminate the 1.35s render-blocking delay

--- a/public/fonts/geist.css
+++ b/public/fonts/geist.css
@@ -6,7 +6,7 @@
   src: url('./geist-sans/Geist-Variable.woff2') format('woff2');
   font-weight: 100 900;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -14,6 +14,6 @@
   src: url('./geist-mono/GeistMono-Variable.woff2') format('woff2');
   font-weight: 100 900;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
